--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   rxdart: ^0.23.0
   graphql: ^3.0.0
+  intl: ^0.16.1
   flutter:
     sdk: flutter
 
@@ -63,7 +64,6 @@ flutter:
     - assets/avatars/avatar-7.png
     - assets/image/icon/icon_image.png
     - assets/image/loginHeader.png
-    - assets/image/buildingMenu.png
 
     - assets/icon/icon-settings.png
     - assets/icon/icon-manager.png
