--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   carousel_pro: ^1.0.0
   flutter_sparkline: ^0.1.0
   flutter_staggered_grid_view: ^0.3.0
+  syncfusion_flutter_charts: ^18.1.56
   shimmer: ^1.1.1
   flutter_bloc: ^3.2.0
   carousel_slider: ^1.3.0
@@ -20,7 +21,6 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   rxdart: ^0.23.0
   graphql: ^3.0.0
-  tuple: ^1.0.3
   intl: ^0.16.1
   flutter:
     sdk: flutter
