--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   rxdart: ^0.23.0
   graphql: ^3.0.0
   tuple: ^1.0.3
+  charts_flutter: ^0.9.0
   intl: ^0.16.1
   flutter:
     sdk: flutter
